remove -webkit-scrollbar - tests fix

--- a/packages/editor-common/web/statics/styles/new-link-panel.scss
+++ b/packages/editor-common/web/statics/styles/new-link-panel.scss
@@ -257,9 +257,9 @@
   max-height: 227px;
   overflow: auto;
 }
-::-webkit-scrollbar {
-  display: none;
-}
+// ::-webkit-scrollbar {
+//   display: none;
+// }
 
 .FilterDropdownElement {
   font-size: 14px;
